# hssdl-mac-example

./: Main.hs  README  README.md  graphics-drawingcombinators-example.cabal
with-cabal/: LICENSE  Setup.hs  sdl-template.cabal
with-cabal/src/: HSMain.hs  Main.hs  main.c
with-make/: LICENSE  Makefile
